<resources>

    <string name="app_name">Global Ads</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <!-- activity_login.xml -->
    <string name="activity_login_title">Please, Log In</string>
    <string name="activity_login_caption_text">Global Ads</string>
    <string name="activity_login_edit_login_text">Login</string>
    <string name="activity_login_edit_password_text">Password</string>
    <string name="activity_login_check_showpassword_text">Show password</string>
    <string name="activity_login_button_login_text">Login</string>
    <string name="activity_login_button_signup_text">Sign Up</string>
	
    <!-- activity_signup.xml -->
    <string name="activity_signup_title">Sign Up For Account</string>
    <string name="activity_signup_caption_text">Global Ads</string>
    <string name="activity_signup_edit_login_text">Login</string>
    <string name="activity_signup_edit_email_text">E-Mail</string>
    <string name="activity_signup_edit_password_text">Password</string>
    <string name="activity_signup_edit_confirmpass_text">Confirm</string>
    <string name="activity_signup_button_accept_text">Accept</string>
	
	<!-- activity_actions_list.xml -->
    <string name="activity_actions_list_title">Actions List</string>
    <string name="activity_actions_list_button_account_text">Account</string>
    <string name="activity_actions_list_button_businesses_text">Businesses</string>
    <string name="activity_actions_list_button_type_text">Type</string>
	
	<!-- item_actions_list.xml -->
    <string name="item_actions_list_text_offer_text">Offer Text</string>
    <string name="item_actions_list_text_company_text">Offering Company</string>
    <string name="item_actions_list_text_datestarts_text">Starts From:</string>
    <string name="item_actions_list_text_dateends_text">Ends On:</string>
    <string name="item_actions_list_text_rating_text">5.0</string>
    <string name="item_actions_list_text_type_text">Type</string>
	
    <string-array name="enum_sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
	
    <string-array name="enum_countries">
        <item>Ukraine</item>
        <item>United Kingdom</item>
        <item>USA</item>
    </string-array>
    
</resources>