<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:background="@drawable/activity_signup_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:weightSum="10" android:gravity="center_horizontal">


    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/LinearLayout1"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:layout_weight="9">

        <View
            android:id="@+id/View08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/activity_signup_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/activity_signup_caption_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/activity_signup_title_fontcolor"
            android:textStyle="bold"
            tools:context=".MainActivity" />

        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_weight="1" android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/activity_signup_edit_login"
          
            style="@style/screen_margins"
            android:layout_width="fill_parent"
            android:background="@drawable/edittext_background"
            android:hint="@string/activity_signup_edit_login_text"
            android:inputType="text" android:maxLines="1" android:lines="1"/>

        <View
            android:id="@+id/View01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/activity_signup_edit_email"
            style="@style/screen_margins"
            android:background="@drawable/edittext_background"
            android:hint="@string/activity_signup_edit_email_text"
            android:inputType="textEmailAddress" />

        <View
            android:id="@+id/View02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/activity_signup_edit_password"
            style="@style/screen_margins"
            android:background="@drawable/edittext_background"
            android:hint="@string/activity_signup_edit_password_text"
            android:inputType="textPassword" />

        <View
            android:id="@+id/View03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/activity_signup_edit_confirmpass"

            style="@style/screen_margins"
            android:background="@drawable/edittext_background"
            android:hint="@string/activity_signup_edit_confirmpass_text"
            android:inputType="textPassword" />

        <View
            android:id="@+id/View04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/activity_signup_spin_country"

            style="@style/screen_margins" />

        <View
            android:id="@+id/View05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/activity_signup_spin_sex"

            style="@style/screen_margins" />

        <View
            android:id="@+id/View06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/activity_signup_button_accept"

            android:layout_height="wrap_content"
            android:background="@drawable/activity_signup_button_accept"
            android:onClick="onButtonAcceptClick"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:text="@string/activity_signup_button_accept_text"
            android:textColor="@color/activity_signup_button_accept_fontcolor"
            android:textSize="20dp"
            android:layout_width="fill_parent" android:textStyle="bold"/>
    <View
        android:id="@+id/View07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
    </LinearLayout>
    </LinearLayout>

</ScrollView>